--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,21 +10,19 @@ repository = "https://github.com/YisusChrist/solidlibs"
 [tool.poetry.dependencies]
 python = "^3.10"
 beautifulsoup4 = "^4.12.3"
-django = "^5.1.4"
+django = ">=5.1.10"
 html5lib = "^1.1"
-human-readable = "^1.3.4"
+human-readable = ">=1.3.4"
 json-tricks = "^3.17.3"
-lxml = "^5.3.0"
+lxml = ">=5.3.0"
 pexpect = "^4.9.0"
 pyenchant = "^3.2.2"
 pyquery = "^2.0.1"
 pytidylib = "^0.3.2"
-requests = "^2.32.3"
+requests = ">=2.32.4"
 rpdb2 = "^2.0.0.1.2"
 socksipy-branch = "^1.01"
-websockets = "^13.0.1"
-
-[tool.poetry.dev-dependencies]
+websockets = ">=13.0.1"
 
 [build-system]
 requires = ["poetry-core"]
